methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: ';' expected but ')' found.
  ligne1())
          ^